fix a scrollbar issue

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -8,6 +8,7 @@
 html {
 	font-size: @body-size;
 	min-height: 100%;
+	overflow: hidden;
 }
 
 body {
